Виправляє структуру scss-файлів та окремі елементи модалки

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     <!--Модалка-->
     <div data-modal class="backdrop is-hidden">
         <div class="modal">
-            <button type="button" class="modal__close-btn">
+            <button data-modal-close type="button" class="modal__close-btn">
                 <svg width="11" height="11">
                     <use href="./img/icons.svg#icon-close-btn"></use>
                 </svg>
